main/default/objects/Solution_Capture__c/Solution_Capture__c.object-meta.xml
<CustomObject>
    <label>Solution Capture</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Solution Capture Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Captures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>