main/default/objects/Solution_Capture__c/fields/Capture_Title__c.field-meta.xml
<CustomField>
    <fullName>Capture_Title__c</fullName>
    <formula>Capture_ID__r.Capture_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capture Title</label>
    <type>Text</type>
</CustomField>