main/default/objects/Solution_Capture__c/fields/Functional_Value__c.field-meta.xml
<CustomField>
    <fullName>Functional_Value__c</fullName>
    <label>Functional Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>