main/default/objects/Solution_Capture__c/fields/Legacy_Solution__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Solution__c</fullName>
    <label>Legacy Solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>