main/default/objects/Solution_Capture__c/fields/Retrofit_Description__c.field-meta.xml
<CustomField>
    <fullName>Retrofit_Description__c</fullName>
    <label>Retrofit Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>