main/default/objects/Solution_Capture__c/fields/Retrofit_Required__c.field-meta.xml
<CustomField>
    <fullName>Retrofit_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retrofit Required</label>
    <type>Checkbox</type>
</CustomField>