main/default/objects/Solution_Capture__c/fields/Solution_Title__c.field-meta.xml
<CustomField>
    <fullName>Solution_Title__c</fullName>
    <label>Solution Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>