main/default/objects/Solution_Capture__c/fields/Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>Solution_Type__c</fullName>
    <label>Solution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Custom Report</fullName>
            </value>
            <value>
                <fullName>Delivered Business Process</fullName>
            </value>
            <value>
                <fullName>Delivered Functionality</fullName>
            </value>
            <value>
                <fullName>New Functionlity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>