main/default/objects/Solution_Capture__c/fields/Standardized_Solution__c.field-meta.xml
<CustomField>
    <fullName>Standardized_Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standardized Solution</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Solution Capture</relationshipLabel>
    <relationshipName>Solution_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>