main/default/objects/Solution_Capture__c/fields/Standardized_Solution_Name__c.field-meta.xml
<CustomField>
    <fullName>Standardized_Solution_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standardized Solution Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Standardized_Solution__c</field>
            <operation>equals</operation>
            <valueField>Master_Data_Value__c.Master_Data__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data_Value__c</referenceTo>
    <relationshipLabel>Solution Capture</relationshipLabel>
    <relationshipName>Solution_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>